--- a/style.css
+++ b/style.css
@@ -86,7 +86,9 @@ color: #131313;
     margin-top: 50px;
     margin-bottom: 45px;
 }
-
+.banner-img img {
+    width: 100%;
+}
 /* main  */
 main {
     display: flex;
@@ -116,8 +118,8 @@ margin-top: 85px;
 
 .feature-img img {
     border-radius: 8px;
-    width: 342px;
-    height: 342px;
+    width: 100%;
+    height: 100%;
 }
 
 .feature-text{
@@ -150,7 +152,7 @@ color: #727272;
 }
 
 .more-features{
-    width: 1440px;
+    max-width: 1440px;
 height: 1059px;
     display: flex;
     align-items: center;
@@ -206,7 +208,7 @@ justify-content: center;
 
 /* .... */
 .more-features-img img{
-    width: 708px;
+width: 100%;
 height: 982px;
 }
 .btn-big{
@@ -225,6 +227,10 @@ padding: 42px;
 
 /* achievement */
 
+.somefacts{
+    max-width: 1440px;
+}
+
 .facts h2{
     font-weight: 700;
 font-size: 45px;
@@ -239,10 +245,11 @@ width: 542px;
 height: 52px;
 }
 .achievement{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     align-items: center;
     justify-content: center;
-    gap: 125px;
+    gap: 50px;
 }
 
 .achiv{
@@ -250,11 +257,10 @@ height: 52px;
     flex-direction: column;
 align-items: center;
     justify-content: center;
-    width: 241.83px;
 height: 241.83px;
 border: solid red 2px;
 padding: 35px;
-margin-bottom: 240px;
+margin-bottom: 140px;
 }
 .achiv img{
     width: 45.22px;
@@ -309,8 +315,9 @@ height: 52px;
 }
 
 .sponspors-imgs{
-    display: flex;
-    gap: 155px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 55px;
 }
 
 /* sponspors end  */
@@ -337,3 +344,27 @@ text-align: center;
 color: #424242;
 }
 /* footer end  */
+
+
+/* responsive */
+
+
+@media screen and (max-width: 576px) {
+
+
+    .feature-info {
+        display: flex;
+        flex-direction: column;
+        gap: 73px;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    .feature-img {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 24px;
+    }
+    
+    
+}
